--- a/PIL.ipynb
+++ b/PIL.ipynb
@@ -8,10 +8,13 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import PIL\n",
-    "from PIL import Image,ImageGrab\n",
+    "from PIL import Image\n",
     "import matplotlib.pyplot as plt \n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "from torchvision.transforms import ToTensor, ToPILImage\n",
+    "import glob\n",
+    "from skimage.metrics import structural_similarity as skssim\n",
+    "from skimage.metrics import peak_signal_noise_ratio as skpsnr\n"
    ]
   },
   {
@@ -56,11 +59,11 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 图片裁剪"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -73,7 +76,7 @@
     "outdir = 'pl'\n",
     "st = 266\n",
     "for i in os.listdir(indir):\n",
-    "    img = Image.open(os.path.join(dirs,i))\n",
+    "    img = Image.open(os.path.join(indir,i))\n",
     "    imgnp = np.array(img)[:,st:st+1920,:]\n",
     "    imgs  = Image.fromarray(imgnp)\n",
     "    #imgs.save(os.path.join(outdir,i))"
@@ -82,6 +85,50 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 图片切片"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_dir = 'E:\\Code\\Python\\datas\\RS\\ITC_VD_Training_Testing_set\\Testing\\Image'\n",
+    "out_dir = 'E:\\Code\\Python\\datas\\RS\\ITC_VD_Training_Testing_set\\Testing\\patch'\n",
+    "#in_dir = 'test'\n",
+    "#out_dir = 'test_p'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for imgi in os.listdir(in_dir):\n",
+    "    img = Image.open(os.path.join(in_dir,imgi))\n",
+    "    imgt = ToTensor()(img)\n",
+    "    c,h,w = imgt.shape\n",
+    "    for i in range(int(h/600)):\n",
+    "        for j in range(int(w/600)):\n",
+    "            x = imgt[:,i*600:(i+1)*600,j*600:(j+1)*600]\n",
+    "            ToPILImage()(x).save(f'{out_dir}/{imgi[2:-4]}_{i}_{j}.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -100,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,12 +168,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ResizeImage(r'Airport',r'Airportx4',4)"
+    "ResizeImage(r'E:\\Code\\Python\\datas\\RS\\ITCVD_patch\\ITCVD_test_patch'r'E:\\Code\\Python\\datas\\RS\\ITCVD_patch\\ITCVD_test_patchx23,43"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,18 +217,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
     "# 通道分离"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -217,12 +257,430 @@
     "\n",
     "#plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 计算图片SSIM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ssim import ssim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_self_psnr(img_path,scale=2):\n",
+    "    hr = Image.open(img_path)\n",
+    "    hrnp = np.array(hr)\n",
+    "    h,w,c = hrnp.shape\n",
+    "    lr = hr.resize((h//2,w//2))\n",
+    "    lrnp = np.array(lr)\n",
+    "    sr = lr.resize((h,w))\n",
+    "    srnp = np.array(sr)\n",
+    "    psnr = skpsnr(hrnp,srnp)\n",
+    "\n",
+    "\n",
+    "    plt.subplot(2,2,1)\n",
+    "    plt.imshow(hr)\n",
+    "    plt.show()\n",
+    "    return psnr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_class_psnr(root):\n",
+    "    total_psnr = 0\n",
+    "    all_images = os.listdir(root)\n",
+    "    for img in all_images:\n",
+    "        imgpath = os.path.join(root,img)\n",
+    "        psnr = image_self_psnr(imgpath)\n",
+    "        #print(psnr)\n",
+    "        total_psnr += psnr\n",
+    "    return total_psnr/len(all_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.08768509688502\n",
+      "30.016250966322637\n",
+      "34.056229496219636\n",
+      "32.70773107857282\n",
+      "34.10794676439004\n",
+      "39.393495919978854\n",
+      "30.144345933675073\n",
+      "29.46089294403796\n",
+      "31.702944431634368\n",
+      "29.139573547368386\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "32.281709617908476"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_class_psnr(r\"WHURS19-test\\Airport\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46.139038395649315"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_class_psnr(r\"WHURS19-test\\Beach\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:301180)",
+      "at w.execute (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:300551)",
+      "at w.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:296215)",
+      "at runMicrotasks (<anonymous>)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at t.CellExecutionQueue.executeQueuedCells (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310950)",
+      "at t.CellExecutionQueue.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310490)"
+     ]
+    }
+   ],
+   "source": [
+    "image_class_psnr(r\"WHURS19-test\\River\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:301180)",
+      "at w.execute (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:300551)",
+      "at w.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:296215)",
+      "at runMicrotasks (<anonymous>)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at t.CellExecutionQueue.executeQueuedCells (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310950)",
+      "at t.CellExecutionQueue.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310490)"
+     ]
+    }
+   ],
+   "source": [
+    "image_self_psnr(r\"WHURS19-test\\Beach\\beach_41.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:301180)",
+      "at w.execute (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:300551)",
+      "at w.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:296215)",
+      "at runMicrotasks (<anonymous>)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at t.CellExecutionQueue.executeQueuedCells (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310950)",
+      "at t.CellExecutionQueue.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310490)"
+     ]
+    }
+   ],
+   "source": [
+    "hr = Image.open(r\"WHURS19-test\\Beach\\beach_41.jpg\")\n",
+    "plt.subplot(2,2,1)\n",
+    "plt.imshow(hr)\n",
+    "#plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_img_by_name(classname):\n",
+    "    dict = {}\n",
+    "    for imgpath in glob.glob(f\"WHURS19-test/{classname}*\"):\n",
+    "        img = Image.open(imgpath)\n",
+    "        dict[os.path.basename(imgpath)] = ToTensor()(img).unsqueeze(0)\n",
+    "    return dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[Errno 13] Permission denied: 'WHURS19-test\\\\Airport'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ARCOBA~1\\AppData\\Local\\Temp/ipykernel_16432/794852733.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mairports\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_img_by_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"airport\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\ARCOBA~1\\AppData\\Local\\Temp/ipykernel_16432/3612680410.py\u001b[0m in \u001b[0;36mget_img_by_name\u001b[1;34m(classname)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mdict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mimgpath\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"WHURS19-test/{classname}*\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimgpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mdict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimgpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mToTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Miniconda3\\envs\\pytorch\\lib\\site-packages\\PIL\\Image.py\u001b[0m in \u001b[0;36mopen\u001b[1;34m(fp, mode, formats)\u001b[0m\n\u001b[0;32m   2889\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2890\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2891\u001b[1;33m         \u001b[0mfp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2892\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2893\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'WHURS19-test\\\\Airport'"
+     ]
+    }
+   ],
+   "source": [
+    "airports = get_img_by_name(\"airport\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:301180)",
+      "at w.execute (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:300551)",
+      "at w.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:296215)",
+      "at runMicrotasks (<anonymous>)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at t.CellExecutionQueue.executeQueuedCells (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310950)",
+      "at t.CellExecutionQueue.start (c:\\Users\\arcobaleno\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1001312534\\out\\client\\extension.js:52:310490)"
+     ]
+    }
+   ],
+   "source": [
+    "beachs = get_img_by_name(\"beach\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " bridges = get_img_by_name(\"bridge\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "industrials = get_img_by_name(\"industrial\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare(ca,cb): \n",
+    "    for a in ca:\n",
+    "        for b in cb:\n",
+    "            calssim = ssim(ca[a], cb[b])\n",
+    "            print(f\"{a} vs {b} ssim : {calssim}\")\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare(airports,beachs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssim(beachs['beach_41.jpg'],airports['airport_41.jpg'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare(airports,bridges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " \n",
+    "def get_thumbnail(image, size=(1200, 750), greyscale=False):\n",
+    "    image = image.resize(size, Image.ANTIALIAS)\n",
+    "    if greyscale:\n",
+    "        image = image.convert('L')\n",
+    "    return image\n",
+    " \n",
+    " \n",
+    "def image_similarity_vectors_via_numpy(image1, image2):\n",
+    "    image1 = get_thumbnail(image1)\n",
+    "    image2 = get_thumbnail(image2)\n",
+    "    images = [image1, image2]\n",
+    "    vectors = []\n",
+    "    norms = []\n",
+    "    for image in images:\n",
+    "        vector = []\n",
+    "        for pixel_tuple in image.getdata():\n",
+    "            vector.append(average(pixel_tuple))\n",
+    "        vectors.append(vector)\n",
+    "        norms.append(linalg.norm(vector, 2))\n",
+    "    a, b = vectors\n",
+    "    a_norm, b_norm = norms\n",
+    "    res = dot(a / a_norm, b / b_norm)\n",
+    "    return res\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import average, linalg, dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image1 = Image.open(r'WHURS19-test\\Desert_41.jpg')\n",
+    "image2 = Image.open(r'WHURS19-test\\river_41.jpg')\n",
+    "cosin = image_similarity_vectors_via_numpy(image1, image2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cosin)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65"
+  },
   "kernelspec": {
-   "name": "python385jvsc74a57bd0c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65",
-   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)"
+   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -234,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
