--- a/pynput.ipynb
+++ b/pynput.ipynb
@@ -3,111 +3,114 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import time \n",
-    "from pynput import keyboard,mouse\n",
-    "from pynput.mouse import Button,Listener,Controller,Events\n",
-    "from pynput.keyboard import Key,Listener,Controller,Events,KeyCode,HotKey,GlobalHotKeys\n"
-   ]
+    "import os\r\n",
+    "import time \r\n",
+    "from pynput import keyboard,mouse\r\n",
+    "from pynput.mouse import Button,Listener,Controller,Events\r\n",
+    "from pynput.keyboard import Key,Listener,Controller,Events,KeyCode,HotKey,GlobalHotKeys\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "# mouse"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "mouse = Controller()\n",
-    "print(mouse.position)\n",
-    "time.sleep(3)\n",
-    "print('The current pointer position is {0}'.format(mouse.position))\n",
-    "\n",
-    "\n",
-    "#set pointer positon\n",
-    "mouse.position = (500, 500)\n",
-    "print('now we have moved it to {0}'.format(mouse.position))\n",
-    "\n",
-    "#鼠标移动（x,y）个距离\n",
-    "mouse.move(5, -5)\n",
-    "print(mouse.position)\n",
-    "\n",
-    "mouse.press(Button.left)\n",
-    "mouse.release(Button.left)\n",
-    "\n",
-    "#Double click\n",
-    "mouse.click(Button.left, 1)\n",
-    "\n",
-    "#scroll two steps down\n",
+    "mouse = Controller()\r\n",
+    "print(mouse.position)\r\n",
+    "time.sleep(3)\r\n",
+    "print('The current pointer position is {0}'.format(mouse.position))\r\n",
+    "\r\n",
+    "\r\n",
+    "#set pointer positon\r\n",
+    "mouse.position = (500, 500)\r\n",
+    "print('now we have moved it to {0}'.format(mouse.position))\r\n",
+    "\r\n",
+    "#鼠标移动（x,y）个距离\r\n",
+    "mouse.move(5, -5)\r\n",
+    "print(mouse.position)\r\n",
+    "\r\n",
+    "mouse.press(Button.left)\r\n",
+    "mouse.release(Button.left)\r\n",
+    "\r\n",
+    "#Double click\r\n",
+    "mouse.click(Button.left, 1)\r\n",
+    "\r\n",
+    "#scroll two steps down\r\n",
     "mouse.scroll(0, 500)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "# keyboard"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def press(key):\n",
-    "    print(f\"press {key}\")\n",
-    "    if key==Key.esc:\n",
-    "        return False\n",
-    "def release(key):\n",
+    "def press(key):\r\n",
+    "    print(f\"press {key}\")\r\n",
+    "    if key==Key.esc:\r\n",
+    "        return False\r\n",
+    "def release(key):\r\n",
     "    print(f\"release {key}\")        "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "while True:\n",
-    "    with keyboard.Listener(on_press=press,on_release=release) as listener:\n",
+    "while True:\r\n",
+    "    with keyboard.Listener(on_press=press,on_release=release) as listener:\r\n",
     "        listener.join()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def on_press(key):\n",
-    "    try:\n",
-    "        print(f'alphanumeric key {key.char} pressed')\n",
-    "        if key.char=='b':\n",
-    "            keyboard.press('b')\n",
-    "            print('key b pressed')\n",
-    "            keyboard.release('b')\n",
-    "    except AttributeError:\n",
-    "        print(f'special key {key} pressed')\n",
-    "\n",
-    "def on_release(key):\n",
-    "    print(f'{key} released')\n",
-    "    if key == keyboard.Key.esc:\n",
+    "def on_press(key):\r\n",
+    "    try:\r\n",
+    "        print(f'alphanumeric key {key.char} pressed')\r\n",
+    "        if key.char=='b':\r\n",
+    "            keyboard.press('b')\r\n",
+    "            print('key b pressed')\r\n",
+    "            keyboard.release('b')\r\n",
+    "    except AttributeError:\r\n",
+    "        print(f'special key {key} pressed')\r\n",
+    "\r\n",
+    "def on_release(key):\r\n",
+    "    print(f'{key} released')\r\n",
+    "    if key == keyboard.Key.esc:\r\n",
     "          return False"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "with keyboard.Listener(on_press = on_press,on_release = on_release) as listener:\r\n",
+    "    listener.join()"
+   ],
    "outputs": [
     {
      "output_type": "stream",
@@ -120,16 +123,13 @@
      ]
     }
    ],
-   "source": [
-    "with keyboard.Listener(on_press = on_press,on_release = on_release) as listener:\n",
-    "    listener.join()"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python383jvsc74a57bd0bd0568d8647bfe2c5b59c81f47863eb65b413eeef312764b5149d804a4a00697",
-   "display_name": "Python 3.8.3 64-bit (conda)"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -141,7 +141,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65"
   }
  },
  "nbformat": 4,
