--- a/PIL.ipynb
+++ b/PIL.ipynb
@@ -672,14 +672,22 @@
    "source": [
     "print(cosin)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65"
+   "hash": "5b5292cc5f82d8561d05c044f8ed41e8f78352f5ad17a4513f2686858f295381"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)",
+   "display_name": "Python 3.8.5 ('pytorch')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
