--- a/algor.ipynb
+++ b/algor.ipynb
@@ -78,7 +78,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr = [ [ 0 for i in range(3)] for j in range(4)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,28 +365,135 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "金字塔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fun(n):\n",
+    "    for i in range(1,n+1): \n",
+    "        print(\" \"*(n-i),end=\"\")\n",
+    "        for j in range(1,i+1):\n",
+    "            print(j,end=\"\")\n",
+    "        for t in range(i-1,0,-1):\n",
+    "            print(t,end=\"\")\n",
+    "\n",
+    "        print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1\n",
+      "       121\n",
+      "      12321\n",
+      "     1234321\n",
+      "    123454321\n",
+      "   12345654321\n",
+      "  1234567654321\n",
+      " 123456787654321\n",
+      "12345678987654321\n"
+     ]
+    }
+   ],
+   "source": [
+    "fun(9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "复原IP地址"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "给定一个只包含数字的字符串，用以表示一个 IP 地址，返回所有可能从 s 获得的 有效 IP 地址 。你可以按任何顺序返回答案。\n",
+    "\n",
+    "有效 IP 地址 正好由四个整数（每个整数位于 0 到 255 之间组成，且不能含有前导 0），整数之间用 '.' 分隔。\n",
+    "\n",
+    "例如：\"0.1.2.201\" 和 \"192.168.1.1\" 是 有效 IP 地址，但是 \"0.011.255.245\"、\"192.168.1.312\" 和 \"192.168@1.1\" 是 无效 IP 地址。\n",
+    "\n",
+    " \n",
+    "\n",
+    "示例 1：\n",
+    "\n",
+    "输入：s = \"25525511135\"\n",
+    "输出：[\"255.255.11.135\",\"255.255.111.35\"]\n",
+    "示例 2：\n",
+    "\n",
+    "输入：s = \"0000\"\n",
+    "输出：[\"0.0.0.0\"]\n",
+    "示例 3：\n",
+    "\n",
+    "输入：s = \"1111\"\n",
+    "输出：[\"1.1.1.1\"]\n",
+    "示例 4：\n",
+    "\n",
+    "输入：s = \"010010\"\n",
+    "输出：[\"0.10.0.10\",\"0.100.1.0\"]\n",
+    "示例 5：\n",
+    "\n",
+    "输入：s = \"101023\"\n",
+    "输出：[\"1.0.10.23\",\"1.0.102.3\",\"10.1.0.23\",\"10.10.2.3\",\"101.0.2.3\"]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.result = []\n",
+    "\n",
+    "    def restoreIpAddresses(self, s: str) :\n",
+    "        self.result.clear()\n",
+    "        if len(s) > 12: return []\n",
+    "        self.backtracking(s, 0, 0)\n",
+    "        return self.result\n",
+    "\n",
+    "    def backtracking(self, s: str, start_index: int, point_num: int) :\n",
+    "        # Base Case\n",
+    "        if point_num == 3:\n",
+    "            if self.is_valid(s, start_index, len(s)-1):\n",
+    "                self.result.append(s[:])\n",
+    "            return\n",
+    "        # 单层递归逻辑\n",
+    "        for i in range(start_index, len(s)):\n",
+    "            # [start_index, i]就是被截取的子串\n",
+    "            if self.is_valid(s, start_index, i):\n",
+    "                s = s[:i+1] + '.' + s[i+1:]\n",
+    "                self.backtracking(s, i+2, point_num+1)  # 在填入.后，下一子串起始后移2位\n",
+    "                s = s[:i+1] + s[i+2:]    # 回溯\n",
+    "            else:\n",
+    "                # 若当前被截取的子串大于255或者大于三位数，直接结束本层循环\n",
+    "                break\n",
+    "    \n",
+    "    def is_valid(self, s: str, start: int, end: int):\n",
+    "        if start > end: return False\n",
+    "        # 若数字是0开头，不合法\n",
+    "        if s[start] == '0' and start != end:\n",
+    "            return False\n",
+    "        if not 0 <= int(s[start:end+1]) <= 255:\n",
+    "            return False\n",
+    "        return True"
+   ]
   },
   {
    "cell_type": "code",
@@ -449,6 +558,20 @@
     "        return dfs(dp_m, dp_n, mianshiguan,mianshizhe,match,row+1,0)\n",
     "    return dfs(dp_m, dp_n, mianshiguan,mianshizhe,match,row,col+1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -588,11 +711,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)",
+   "display_name": "Python 3.8.5 ('pytorch')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -606,6 +727,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5b5292cc5f82d8561d05c044f8ed41e8f78352f5ad17a4513f2686858f295381"
+   }
   }
  },
  "nbformat": 4,
