--- a/grad/l0smooth/smooth.ipynb
+++ b/grad/l0smooth/smooth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,37 +66,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = r\"E:\\Code\\Python\\datas\\selfAID\\low-AID-test\"\n",
-    "L0_dir = r\"AID-test-low-l0.1k5\"\n",
-    "L0grad_dir = r\"AID-test-low-l0.1k5-grad\"\n",
-    "os.mkdir(L0_dir)\n",
-    "for i in os.listdir(images_dir):\n",
-    "    img_path = os.path.join(images_dir,i)\n",
-    "    im = Image.open(img_path)\n",
-    "    Im = np.array(im)\n",
-    "    S = L0Smoothing(Im,0.1,5)\n",
-    "    S = np.clip(S,0,1)\n",
-    "    plt.imsave(os.path.join(L0_dir,i),S)\n",
-    "os.mkdir(L0grad_dir)\n",
-    "for i in os.listdir(L0_dir):\n",
-    "    img_path = os.path.join(L0_dir,i) v   \n",
-    "    im = cv2.imread(img_path)\n",
-    "    Sgray = cv2.cvtColor(im,cv2.COLOR_BGR2GRAY)\n",
-    "    Sgrad = sobel_demo(Sgray)\n",
-    "    cv2.imwrite(os.path.join(L0grad_dir,i),Sgrad)\n"
+    "def smooth_images(origin_dir,smooth_dir,grad_dir):\n",
+    "    os.mkdir(smooth_dir)\n",
+    "    os.mkdir(grad_dir)\n",
+    "    for i in os.listdir(origin_dir):\n",
+    "        im = Image.open(os.path.join(origin_dir,i))\n",
+    "        imnp = np.array(im)\n",
+    "        S = L0Smoothing(imnp,0.1,5)\n",
+    "        S = np.clip(S,0,1)\n",
+    "        plt.imsave(os.path.join(smooth_dir,i),S)\n",
+    "    \n",
+    "        im = cv2.imread(os.path.join(smooth_dir,i))\n",
+    "        Sgray = cv2.cvtColor(im,cv2.COLOR_BGR2GRAY)\n",
+    "        Sgrad = sobel_demo(Sgray)\n",
+    "        cv2.imwrite(os.path.join(grad_dir,i),Sgrad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dir = r\"E:\\Code\\Python\\datas\\selfAID\\AID-train-cross-high\"\n",
+    "L0_dir = r\"AID-train-cross-high-l0.1k5\"\n",
+    "L0grad_dir = r\"AID-train-cross-high-l0.1k5-grad\"\n",
+    "smooth_images(images_dir,L0_dir,L0grad_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dir = r\"E:\\Code\\Python\\datas\\selfAID\\AID-train-cross-mid\"\n",
+    "L0_dir = r\"AID-train-cross-mid-l0.1k5\"\n",
+    "L0grad_dir = r\"AID-train-cross-mid-l0.1k5-grad\"\n",
+    "smooth_images(images_dir,L0_dir,L0grad_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dir = r\"E:\\Code\\Python\\datas\\selfAID\\AID-train-cross-low\"\n",
+    "L0_dir = r\"AID-train-cross-low-l0.1k5\"\n",
+    "L0grad_dir = r\"AID-train-cross-low-l0.1k5-grad\"\n",
+    "smooth_images(images_dir,L0_dir,L0grad_dir)\n"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)",
+   "display_name": "Python 3.8.5 ('pytorch')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -109,9 +139,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5b5292cc5f82d8561d05c044f8ed41e8f78352f5ad17a4513f2686858f295381"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
