--- a/matplot.ipynb
+++ b/matplot.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt \n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "from random import choice\n",
+    "from random import randint"
    ]
   },
   {
@@ -130,15 +132,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from random import choice"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [],
@@ -252,8 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pygal\n",
-    "from random import randint"
+    "import pygal"
    ]
   },
   {
@@ -315,120 +307,11 @@
     "hist.add('D7',frequencies)\n",
     "hist.render_to_file('die6.svg')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = [仝晓丹,\n",
-    "柴柯雅,\n",
-    "种豪展,\n",
-    "贾俊豪,\n",
-    "张瑾悦,\n",
-    "王帅波,\n",
-    "孙明,\n",
-    "蔡芳菲,\n",
-    "郭奕燊,\n",
-    "王晨霁,\n",
-    "于鑫宇,\n",
-    "何金童,\n",
-    "黄文君,\n",
-    "杨涛,\n",
-    "茹嘉伟,\n",
-    "陈圣梅,\n",
-    "信映州,\n",
-    "任璐,\n",
-    "张哲,\n",
-    "郭瑜,\n",
-    "李林潞,\n",
-    "焦晗暘,\n",
-    "马东晗,\n",
-    "李鑫妮,\n",
-    "段博越,\n",
-    "王梦玮,\n",
-    "赵启轩,\n",
-    "马俊飞,\n",
-    "王金帅,\n",
-    "马航,\n",
-    "袁玉芳,\n",
-    "李箫阳,\n",
-    "张嘉洋,\n",
-    "王华,\n",
-    "李柳静,\n",
-    "叶纾君,\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from random import randint\n",
-    "randint(1,35)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "randint(1,35)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "randint(1,35)"
-   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c2c0bba31bef276960c92166e4dc324d20d321691368e020af08fea8957d0a65"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('pytorch': conda)",
+   "display_name": "Python 3.8.5 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -442,9 +325,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.15"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "5b5292cc5f82d8561d05c044f8ed41e8f78352f5ad17a4513f2686858f295381"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
